update to lines representations on graph

--- a/comparacion-directa-mejorada-x.html
+++ b/comparacion-directa-mejorada-x.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reporte J.C. s - Final</title>
+    <title>Reporte J.C. s - Corregido</title>
     <style>
         body { font-family: sans-serif; margin: 0; padding: 10px; background-color: #f4f7f6; color: #333; }
         .container { max-width: 600px; margin: 0 auto; background: white; padding: 15px; border-radius: 10px; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
@@ -50,7 +50,6 @@
                     <text x="55" y="154">$100k</text>
                     <text x="55" y="104">$150k</text>
                     <text x="55" y="54">$200k</text>
-                    <text x="45" y="25" text-anchor="start" font-weight="bold">Monto ($)</text>
                 </g>
 
                 <g font-size="10" fill="#666" text-anchor="middle">
@@ -59,7 +58,6 @@
                     <text x="240" y="265">10</text>
                     <text x="330" y="265">15</text>
                     <text x="420" y="265">20</text>
-                    <text x="240" y="285" font-weight="bold">Años</text>
                 </g>
 
                 <path d="M 60 250 L 420 82" stroke="gray" stroke-width="2" stroke-dasharray="2,2" fill="none" />
@@ -68,10 +66,9 @@
                 
                 <path d="M 60 250 L 420 -27" stroke="#27ae60" stroke-width="2" stroke-dasharray="8,4" fill="none" />
 
-                <path d="M 60 234 L 150 220 L 240 182 L 330 144 L 420 86" stroke="#2c3e50" stroke-width="4" fill="none" />
+                <path d="M 60 250 L 114 234 L 150 220 L 240 182 L 330 144 L 420 86" stroke="#2c3e50" stroke-width="4" fill="none" />
                 
                 <circle cx="420" cy="86" r="4" fill="#2c3e50" />
-                <text x="415" y="75" font-size="9" font-weight="bold" fill="#2c3e50" text-anchor="end">Punto de Equilibrio (Año 20)</text>
             </svg>
         </div>
 
@@ -97,7 +94,7 @@
         </div>
 
         <div class="note">
-            <strong>Referencia del Gráfico:</strong> Las líneas representan la evolución del capital. La <strong>Póliza J.C.</strong> (Línea Sólida) cruza la línea de <strong>Costo Total</strong> (Punteada Gris) al llegar al año 20, marcando la recuperación total de la inversión.
+            <strong>Análisis de Recuperación:</strong> En este gráfico corregido, puede ver que la <strong>Póliza J.C.</strong> comienza por debajo del costo total pagado. Esto representa el periodo inicial donde los costos del seguro son mayores al valor acumulado, hasta que se igualan en el año 20.
         </div>
     </div>
 </body>
